--- a/vignettes/lsttheory-intro.Rnw
+++ b/vignettes/lsttheory-intro.Rnw
@@ -37,32 +37,21 @@ pdfview={XYZ null null null}%
 
 \author{
   Axel Mayer\\
-  University of Jena
-  \and
-  Rolf Steyer\\
-  University of Jena
-  \and
-  Christian Geiser\\
-  Utah State University
-  \and
-  David A. Cole\\
-  Vanderbilt University
+  Ghent University
 }
 
 \date{\today}
 \maketitle
 
 \begin{abstract}
-This \textsf{R} \cite{RCoreTeam} package is a supplement for the article 'A Theory of States and Traits' (Steyer, Geiser, Cole, \& Mayer, 2013). It is based on the structural equation modeling \textsf{R} package \texttt{lavaan} (Rosseel, 2012) and provides a convenient interface to compute some common models of the revised latent state-trait theory (LST-R theory). The main function of the package allows for easy specification of multistate, multistate-singletrait, and multistate-multitrait models. It automatically generates \texttt{lavaan} syntax for these models, runs the models, and returns model estimates together with reliability, occasion specificity, and consistency coefficients for the respective models. There is also an additional package called
-\texttt{lsttheoryGUI}, which depends on \texttt{lsttheory}. The \texttt{lsttheoryGUI} provides a graphical user interface, i.e., a click menu, for users who are not familiar with \textsf{R}. \texttt{lsttheoryGUI} works best with the JGR console for R (Markus Helbig, Simon Urbanek, \& Ian Fellows, 2013).
-
+This \textsf{R} \cite{RCoreTeam} package is a supplement for the article 'A Theory of States and Traits -- Revised' (SMGC; Steyer, Mayer, Geiser, \& Cole, in press). It is based on the structural equation modeling \textsf{R} package \texttt{lavaan} (Rosseel, 2012) and provides a convenient interface to compute some common models of the revised latent state-trait theory (LST-R theory). The main function of the package allows for easy specification of multistate, multistate-singletrait, and multistate-multitrait models. It automatically generates \texttt{lavaan} syntax for these models, runs the models, and returns model estimates together with reliability, occasion specificity, and consistency coefficients for the respective models. 
 \end{abstract}
 
 \noindent
 {\bf Keywords:} states, traits, reliability, occasion specificity, consistency \\
 
 
-\textbf{Cautionary Note:} The package is currently under development and some things may change in the future. We are at an early stage of development and it is likely that the structure and key aspects of the two packages will change. The latest versions can be downloaded from \url{metheval.uni-jena.de}. We also plan to release the package on CRAN, once we are a bit furhter in the develpment process. Please report any bugs.
+\textbf{Cautionary Note:} The package is currently under development and some things may change in the future. We are at an early stage of development and it is likely that the structure and key aspects of the two packages will change. We also plan to release the package on CRAN, once we are a bit furhter in the develpment process. Please report any bugs.
 
 
 
@@ -76,13 +65,13 @@ This \textsf{R} \cite{RCoreTeam} package is a supplement for the article 'A Theo
 
 \section{Introduction} \label{sec:intro}
 
-\texttt{lsttheory} allows for easy specification of multistate, multistate-singletrait, and multistate-multitrait models. This vignette is structured as follows: We first describe the installation process in detail for nonexperienced users of \textsf{R}. Users who are familiar with package installation from local .zip files may wish to skip this section. We then present various kinds of LST-R theory models with syntax and model results.
+\texttt{lsttheory} allows for easy specification of multistate, multistate-singletrait, and multistate-multitrait models. This vignette is structured as follows: We first describe the installation process in detail for nonexperienced users of \textsf{R}. Users who are familiar with package installation from local .zip files or from source (via Github) may wish to skip this section. We then present various kinds of LST-R theory models with syntax and model results.
 
 
 
 \section{Installation}
 
-The \textsf{R} package \texttt{lsttheory} will most likely be installed from a local file. Therefore, we need to install the dependencies first. The installation has been tested under Windows 7 and under Linux (Ubuntu 11.10). It should also work under Mac OS X using the JGR console --- but we haven't tested it yet. Please make sure that you are using R version 3.0.1 or higher.
+The \textsf{R} package \texttt{lsttheory} can be installed from a local file. Therefore, we need to install the dependencies first. The installation has been tested under Windows 7 and under Linux (Ubuntu 11.10). It should also work under Mac OS X but we haven't tested it yet. Please make sure that you are using R version 3.0.1 or higher.
 
 \subsection{Windows Installation}
 
@@ -90,50 +79,35 @@ For a Windows installation (without Rtools) we suggest installing the dependenci
 %
 <<wininstall1, eval=F>>=
 install.packages("lavaan")  ## for lsttheory
-install.packages("Deducer")  ## for lsttheoryGUI
+install.packages("shiny")  ## for user Interface
+install.packages("semPlot")  ## for plots
 @
 %
-in the console (either the standard Rconsole or the JGR console) and then selecting a mirror next to you. After that, the \textsf{R} package \texttt{lsttheory} can be installed using the Windows binary file (with file ending .zip) as follows:
+in the console and then selecting a mirror next to you. After that, the \textsf{R} package \texttt{lsttheory} can be installed using the Windows binary file (with file ending .zip) as follows:
 %
 <<wininstall2, eval=F>>=
 install.packages("D:/workspace/lsttheory_0.1-1.zip")
-install.packages("D:/workspace/lsttheoryGUI_0.1-1.zip")
 @
 %
-Please adjust the file path and version number accordingly. We recommend using the JGR console (\url{http://rforge.net/JGR/}). The JGR console can be called via a launcher or from with an R session by calling
-%
-<<loadjgr, eval=F>>=
-library(JGR)
-JGR()
-@
-%
-
+Please adjust the file path and version number accordingly. 
 
 \subsection{Linux Installation}
 
-We assume that Linux users are familiar with installing \textsf{R} packages from source. The source files are \texttt{lsttheory\_0.1-1.tar.gz} and \texttt{lsttheoryGUI\_0.1-1.tar.gz}. Note that for the graphical user interface to work, the user may want to use the JGR console. The JGR console can be called from with an R session by calling
-%
-<<loadjgrlinux, eval=F>>=
-library(JGR)
-JGR()
-@
-%
+We assume that Linux users are familiar with installing \textsf{R} packages from source. The source files is \texttt{lsttheory\_0.1-1.tar.gz} and can be downloaded from GitHub. 
 
 \subsection{Loading the Package}
 
-After having succesfully installed the packages, we need to load them:
+After having succesfully installed the package, we need to load them:
 %
 <<loading,eval=TRUE>>=
 library("lsttheory")
-#library("lsttheoryGUI")
 @
 %
-If you are using the JGR console, you can click on default next to the lsttheory and lsttheoryGUI entry in the Package Installer. Then the packages and their dependencies are automatically loaded every time you open JGR.
 
 \newpage
 \section{Multistate Models}
 
-The lsttheory pacakge contains several simulated example datasets. The first one that we use is the dataset \texttt{multistate}. It contains 9 manifest variables $Y_{it}$, where the index refers to the $i$th manifest variable assessed at occasion $t$.
+The lsttheory pacakge contains several simulated example datasets. The first one that we use is the dataset \texttt{multistate}. It contains 4 manifest variables $Y_{it}$, where the index refers to the $i$th manifest variable assessed at occasion $t$. This dataset has been used in Supplement C of Steyer, Mayer, Geiser \& Cole (in press) to describe software input for \texttt{lavaan} for LST-R models.
 %
 <<datamultistate>>=
 data(multistate)
@@ -143,19 +117,19 @@ head(round(multistate,2))
 
 \subsection{Multistate Model with $\eta_t$-Congenericity}
 
-First, we use this dataset to fit a multistate model with $\eta_t$-congenericity and conditional mean independence (see Box 4.1 of SGCM). The main function of our package to be called by the user is \texttt{lsttheory}. See \texttt{?lsttheory} for details. It is used to fit all models. The multistate model with $\eta_t$-congenericity can be specified as follows:
+First, we use this dataset to fit a multistate model with $\eta_t$-congenericity and conditional mean independence (see Box 4.1 of SMGC). The main function of our package to be called by the user is \texttt{lsttheory}. See \texttt{?lsttheory} for details. It is used to fit all models. The multistate model with $\eta_t$-congenericity can be specified as follows:
 
 
 %
 <<multistate01>>=
-m1 <- lsttheory(neta=3, data=multistate)
+m1 <- lsttheory(neta=2, data=multistate)
 print(m1)
 @
 %
 
-The lsttheory function just requires two mandatory arguments: The number of common state variables $\eta_t$ and the dataset to use. In the current version of our package, the dataset may only include the manifest variables $Y_{it}$ and these should be ordered by occasion $t$ and indicator $i$, i.e., $Y_{11}, Y_{21}, \ldots, Y_{12}, Y_{22}, \ldots, Y_{13}, Y_{23}, \ldots$. The lsttheory function returns an object of class lsttheory for which several methods are available. \texttt{print(m1)} shows reliability, occasion specificity, and consistency coefficients (see Box 3.1 of SGCM). For the multistate model only reliability coefficients are available, because traits are not modeled.
+The lsttheory function just requires two mandatory arguments: The number of common state variables $\eta_t$ and the dataset to use. In the current version of our package, the dataset may only include the manifest variables $Y_{it}$ and these should be ordered by occasion $t$ and indicator $i$, i.e., $Y_{11}, Y_{21}, \ldots, Y_{12}, Y_{22}, \ldots, Y_{13}, Y_{23}, \ldots$. The lsttheory function returns an object of class lsttheory for which several methods are available. \texttt{print(m1)} shows reliability, occasion specificity, and consistency coefficients (see Box 3.1 of SMGC). For the multistate model only reliability coefficients are available, because traits are not modeled.
 
-The function lsttheory has automaticall generated lavaan input syntax:
+The function lsttheory has automatically generated lavaan input syntax:
 %
 <<multistate01_lavaansyntax>>=
 cat(m1@lavaansyntax)
@@ -172,10 +146,11 @@ The slot lavaanres in the m1 object contains the fitted lavaan object of class l
 
 \subsection{Multistate Model with Essential $\eta_t$-Equivalence}
 
-The default setting of the lsttheory function is to assume $\eta_t$-congenericity. If we want to assume essential $\eta_t$-equivalence, we need to specify an additional argument, namely the \texttt{equiv.assumption} argument, which is a list of equivalence assumptions. For the multistate model, the xi argument will be ignored. By specifying \texttt{tau="ess"}, we assume essential $\eta_t$-equivalence:
+The default setting of the lsttheory function is to assume $\eta_t$-congenericity. If we want to assume essential $\eta_t$-equivalence, we need to specify an additional argument, namely the \texttt{equiv.assumption} argument, which is a list of equivalence assumptions. For the multistate model, the theta argument will be ignored. By specifying \texttt{tau="ess"}, we assume essential $\eta_t$-equivalence:
 %
 <<multistate02>>=
-m1 <- lsttheory(neta=3, data=multistate, equiv.assumption=list(tau="ess", xi="equi"))
+m1 <- lsttheory(neta=2, data=multistate, 
+                equiv.assumption=list(tau="ess", theta="equi"))
 coef(m1@lavaanres, type="user")
 @
 %
@@ -187,7 +162,8 @@ coef(m1@lavaanres, type="user")
 Similarly, if we want to assume $\eta_t$-equivalence, we specify the equivalence assumption as follows:
 %
 <<multistate03>>=
-m1 <- lsttheory(neta=3, data=multistate, equiv.assumption=list(tau="equi", xi="equi"))
+m1 <- lsttheory(neta=2, data=multistate, 
+                equiv.assumption=list(tau="equi", theta="equi"))
 coef(m1@lavaanres, type="user")
 @
 %
@@ -200,41 +176,39 @@ In order to add scale invariance assumptions over time, we need to specify the s
 
 %
 <<multistate04>>=
-m1 <- lsttheory(neta=3, data=multistate, scale.invariance=list(lait0=TRUE, lait1=TRUE, gat0=TRUE, gat1=TRUE))
+m1 <- lsttheory(neta=2, data=multistate, 
+                scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 coef(m1@lavaanres, type="user")
 @
 %
 Of course, the scale invariance argument can also be used for a multistate model with essential $\eta_t$-equivalence. Then, the lait1 entry is ignored.
 %
 <<multistate05,eval=FALSE>>=
-m1 <- lsttheory(neta=3, data=multistate, equiv.assumption=list(tau="ess", xi="equi"), scale.invariance=list(lait0=TRUE, lait1=TRUE, gat0=TRUE, gat1=TRUE))
+m1 <- lsttheory(neta=2, data=multistate, equiv.assumption=list(tau="ess", theta="equi"), scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 @
 %
 For a multistate model with $\eta_t$-equivalence, all scale invariance settings are ignored.
 
-\subsection{Multistate Models with Method Factors}
-
-Section under development
 
 \newpage
 \section{Multistate-Singletrait Models}
 
 \subsection{Multistate-Singletrait Models with $\theta$-Congenericity}
 
-The same function lsttheory can also be used to fit multistate-singletrait models in LST-R theory. We only need to specify that there is one $\xi$ variable\footnote{The names of the variables will be changed to be in line with SGCM} in addition to the specification of the corresponding multistate model. The following syntax specifies a multistate-singletrait model with the these assumptions:
+The same function lsttheory can also be used to fit multistate-singletrait models in LST-R theory. We only need to specify that there is one $\theta$ variable in addition to the specification of the corresponding multistate model. The following syntax specifies a multistate-singletrait model with these assumptions:
 %
 \begin{itemize}
-  \item $\eta_t$-congenericity (Box 4.1 of SGCM)
-  \item conditional mean independence (Box 4.1 of SGCM)
-  \item $\theta$-congenericity (Box 5.1 of SGCM)
+  \item $\eta_t$-congenericity (Box 4.1 of SMGC)
+  \item conditional mean independence (Box 4.1 of SMGC)
+  \item $\theta$-congenericity (Box 5.1 of SMGC)
 \end{itemize}
 %
 <<multistatesingletrait01>>=
-m1 <- lsttheory(neta=3, nxi=1, data=multistate)
+m1 <- lsttheory(neta=3, ntheta=1, data=multistate02)
 print(m1)
 @
 %
-We now also get estimates for the occasion specificity and consistency coefficents in addition to the reliability coefficients. To see all parameters of the model:
+Note that we use the \texttt{multistate02} data set for this model -- it contains three indicators at three occasions of measurement. We now also get estimates for the occasion specificity and consistency coefficents in addition to the reliability coefficients. To see all parameters of the model:
 %
 <<multistatesingletrait02>>=
 coef(m1@lavaanres, type="user")
@@ -248,15 +222,17 @@ coef(m1@lavaanres, type="user")
 We don't show all possible combinations of assumptions. We just give one more example of a multistate-singletrait model with this set of assumptions:
 %
 \begin{itemize}
-  \item essential $\eta_t$-equivalence (Box 4.1 of SGCM)
+  \item essential $\eta_t$-equivalence (Box 4.1 of SMGC)
   \item scale invariance over time
-  \item conditional mean independence (Box 4.1 of SGCM)
-  \item $\theta$-equivalence (Box 5.1 of SGCM)
+  \item conditional mean independence (Box 4.1 of SMGC)
+  \item $\theta$-equivalence (Box 5.1 of SMGC)
 \end{itemize}
 %
 %
 <<multistatesingletrait03>>=
-m1 <- lsttheory(neta=3, nxi=1, data=multistate, equiv.assumption=list(tau="ess", xi="equi"), scale.invariance=list(lait0=TRUE, lait1=TRUE, gat0=TRUE, gat1=TRUE))
+m1 <- lsttheory(neta=3, ntheta=1, data=multistate02, 
+                equiv.assumption=list(tau="ess", theta="equi"), 
+                scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 coef(m1@lavaanres, type="user")
 @
 %
@@ -283,10 +259,10 @@ head(round(multitraitmultistate,2))
 The first model that we want to show with this dataset is a multistate-doubletrait model with these assumptions:
 %
 \begin{itemize}
-  \item $\eta_t$-congenericity (Box 4.1 of SGCM)
-  \item conditional mean independence (Box 4.1 of SGCM)
-  \item $\theta_1$-congenericity (Box 6.1 of SGCM)
-  \item $\theta_2$-congenericity (Box 6.1 of SGCM)
+  \item $\eta_t$-congenericity (Box 4.1 of SMGC)
+  \item conditional mean independence (Box 4.1 of SMGC)
+  \item $\theta_1$-congenericity (Box 6.1 of SMGC)
+  \item $\theta_2$-congenericity (Box 6.1 of SMGC)
 \end{itemize}
 %
 
@@ -294,7 +270,7 @@ The model syntax is:
 
 %
 <<multistatedoubletrait01>>=
-m1 <- lsttheory(neta=4, nxi=2, data=multitraitmultistate)
+m1 <- lsttheory(neta=4, ntheta=2, data=multitraitmultistate)
 coef(m1@lavaanres, type="user")
 @
 %
@@ -303,26 +279,39 @@ coef(m1@lavaanres, type="user")
 
 \section{Plot LST-R Theory Models with \texttt{semPlot}}
 
+The package \texttt{semPlot} by Sacha Epskamp can be used to plot such LST-R models as shown in this vignette. To plot the multistate-doubletrait model shown in last section, we call:
 
-\newpage
+%
+<<semplot01, eval=FALSE>>=
+library(semPlot)
+semPaths(m1@lavaanres, style="lisrel", intercepts=F, 
+         layout="tree2", rotation=4, nCharNodes=4, nCharEdges=4, 
+         optimizeLatRes=F, residScale=10)
+@
+%
 
-\section{Graphical User Interface \texttt{lsttheoryGUI}}
+which gives the figure shown in Figure \ref{fig:semplot01}.
 
-The graphical user interface is under development. It currently contains two menu items: One for loading the datasets included in the package and one for specifying the LST-R theory model. Figure \ref{fig:loaddata} shows a screenshot of the dialog that can be used to load datasets. 
-
+%
 \begin{figure}
-  \includegraphics[scale=0.5]{loaddata.png}
-  \label{fig:loaddata}
+\centering
+\includegraphics[scale=0.7]{semplot01}
+\caption{Multistate-Doubletrait Model.}
+\label{fig:semplot01}
 \end{figure}
+%           
 
+\section*{References}
 
-Figure \ref{fig:lsttheory} shows a screenshot of the dialog for specifying the LST-R theory models. The dialog is a convenient graphical interface for the \texttt{lsttheory} function described previously. The graphical user interface provides easy access to almost all functionality described earlier in this vignette.
-
-
-\begin{figure}
-  \includegraphics[scale=0.5]{lsttheory.png}
-  \label{fig:lsttheory}
-\end{figure}
+\begin{description}
+\item Epskamp, S. (2013). semPlot: Path diagrams and visual analysis of various
+  SEM packages' output. R package version 0.3.2.  \url{http://CRAN.R-project.org/package=semPlot}
+\item R Core Team (2013). R: A language and environment for statistical computing.
+  R Foundation for Statistical Computing, Vienna, Austria. URL \url{http://www.R-project.org/}.
+\item Rosseel, Y. (2012). lavaan: An R Package for Structural Equation Modeling.
+  Journal of Statistical Software, 48(2), 1--36. URL  \url{http://www.jstatsoft.org/v48/i02/}.
+\item Steyer, R., Mayer, A., Geiser, C., \& Cole, D.A. (in press). A theory of states and traits -- revised. Annual Review of Clinical Psychology.
+\end{description}
 
 
 \end{document}
