--- a/vignettes/lsttheory-intro.Rnw
+++ b/vignettes/lsttheory-intro.Rnw
@@ -37,7 +37,7 @@ pdfview={XYZ null null null}%
 
 \author{
   Axel Mayer\\
-  Ghent University
+  Bielefeld University
 }
 
 \date{\today}
@@ -107,11 +107,11 @@ library("lsttheory")
 \newpage
 \section{Multistate Models}
 
-The lsttheory pacakge contains several simulated example datasets. The first one that we use is the dataset \texttt{multistate}. It contains 4 manifest variables $Y_{it}$, where the index refers to the $i$th manifest variable assessed at occasion $t$. This dataset has been used in Supplement C of Steyer, Mayer, Geiser \& Cole (in press) to describe software input for \texttt{lavaan} for LST-R models.
+The lsttheory pacakge contains several simulated example datasets. The first one that we use is the dataset \texttt{d_multistate}. It contains 4 manifest variables $Y_{it}$, where the index refers to the $i$th manifest variable assessed at occasion $t$. This dataset has been used in Supplement C of Steyer, Mayer, Geiser \& Cole (in press) to describe software input for \texttt{lavaan} for LST-R models.
 %
 <<datamultistate>>=
-data(multistate)
-head(round(multistate,2))
+data(d_multistate)
+head(round(d_multistate,2))
 @
 %
 
@@ -122,7 +122,7 @@ First, we use this dataset to fit a multistate model with $\eta_t$-congenericity
 
 %
 <<multistate01>>=
-m1 <- lsttheory(neta=2, data=multistate)
+m1 <- lsttheory(neta=2, data=d_multistate)
 print(m1)
 @
 %
@@ -149,7 +149,7 @@ The slot lavaanres in the m1 object contains the fitted lavaan object of class l
 The default setting of the lsttheory function is to assume $\eta_t$-congenericity. If we want to assume essential $\eta_t$-equivalence, we need to specify an additional argument, namely the \texttt{equiv.assumption} argument, which is a list of equivalence assumptions. For the multistate model, the theta argument will be ignored. By specifying \texttt{tau="ess"}, we assume essential $\eta_t$-equivalence:
 %
 <<multistate02>>=
-m1 <- lsttheory(neta=2, data=multistate, 
+m1 <- lsttheory(neta=2, data=d_multistate, 
                 equiv.assumption=list(tau="ess", theta="equi"))
 coef(m1@lavaanres, type="user")
 @
@@ -162,7 +162,7 @@ coef(m1@lavaanres, type="user")
 Similarly, if we want to assume $\eta_t$-equivalence, we specify the equivalence assumption as follows:
 %
 <<multistate03>>=
-m1 <- lsttheory(neta=2, data=multistate, 
+m1 <- lsttheory(neta=2, data=d_multistate, 
                 equiv.assumption=list(tau="equi", theta="equi"))
 coef(m1@lavaanres, type="user")
 @
@@ -176,7 +176,7 @@ In order to add scale invariance assumptions over time, we need to specify the s
 
 %
 <<multistate04>>=
-m1 <- lsttheory(neta=2, data=multistate, 
+m1 <- lsttheory(neta=2, data=d_multistate, 
                 scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 coef(m1@lavaanres, type="user")
 @
@@ -184,7 +184,7 @@ coef(m1@lavaanres, type="user")
 Of course, the scale invariance argument can also be used for a multistate model with essential $\eta_t$-equivalence. Then, the lait1 entry is ignored.
 %
 <<multistate05,eval=FALSE>>=
-m1 <- lsttheory(neta=2, data=multistate, equiv.assumption=list(tau="ess", theta="equi"), scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
+m1 <- lsttheory(neta=2, data=d_multistate, equiv.assumption=list(tau="ess", theta="equi"), scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 @
 %
 For a multistate model with $\eta_t$-equivalence, all scale invariance settings are ignored.
@@ -204,7 +204,7 @@ The same function lsttheory can also be used to fit multistate-singletrait model
 \end{itemize}
 %
 <<multistatesingletrait01>>=
-m1 <- lsttheory(neta=3, ntheta=1, data=multistate02)
+m1 <- lsttheory(neta=3, ntheta=1, data=d_multistate02)
 print(m1)
 @
 %
@@ -230,7 +230,7 @@ We don't show all possible combinations of assumptions. We just give one more ex
 %
 %
 <<multistatesingletrait03>>=
-m1 <- lsttheory(neta=3, ntheta=1, data=multistate02, 
+m1 <- lsttheory(neta=3, ntheta=1, data=d_multistate02, 
                 equiv.assumption=list(tau="ess", theta="equi"), 
                 scale.invariance=list(lait0=TRUE, lait1=TRUE, lat0=TRUE, lat1=TRUE))
 coef(m1@lavaanres, type="user")
@@ -246,8 +246,8 @@ For the mulistate doubletrait models, we need to use a different data set, becau
 
 %
 <<datamultitraitmultistate>>=
-data(multitraitmultistate)
-head(round(multitraitmultistate,2))
+data(d_multitraitmultistate)
+head(round(d_multitraitmultistate,2))
 @
 %
 
@@ -270,7 +270,7 @@ The model syntax is:
 
 %
 <<multistatedoubletrait01>>=
-m1 <- lsttheory(neta=4, ntheta=2, data=multitraitmultistate)
+m1 <- lsttheory(neta=4, ntheta=2, data=d_multitraitmultistate)
 coef(m1@lavaanres, type="user")
 @
 %
